--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.2.2",
     "express": "^4.18.2",
     "jquery": "^3.6.1",
+    "jquery-ui": "^1.13.2",
     "jsdom": "^20.0.1",
     "serve-favicon": "^2.5.0",
     "socket.io": "^4.5.3"
